@@ -228,7 +228,7 @@ EnergyCorrelatorU2:  U2(beta) = ECFG(3, 1, beta) with pt_R
 -------------------------------------------------------------------------------------
 
 -------------------------------------------------------------------------------------
-EnergyCorrelatorU3:  U3(beta) = ECFN(4, 1, beta) with pt_R
+EnergyCorrelatorU3:  U3(beta) = ECFG(4, 1, beta) with pt_R
 -------------------------------------------------------------------------------------
    beta         U3 obs 
   0.100   0.0093606928 
@@ -455,7 +455,7 @@ EnergyCorrelatorU2:  U2(beta) = ECFG(3, 1, beta) with E_theta
 -------------------------------------------------------------------------------------
 
 -------------------------------------------------------------------------------------
-EnergyCorrelatorU3:  U3(beta) = ECFN(4, 1, beta) with E_theta
+EnergyCorrelatorU3:  U3(beta) = ECFG(4, 1, beta) with E_theta
 -------------------------------------------------------------------------------------
    beta         U3 obs 
   0.100   0.0090428096 
@@ -682,7 +682,7 @@ EnergyCorrelatorU2:  U2(beta) = ECFG(3, 1, beta) with pt_R
 -------------------------------------------------------------------------------------
 
 -------------------------------------------------------------------------------------
-EnergyCorrelatorU3:  U3(beta) = ECFN(4, 1, beta) with pt_R
+EnergyCorrelatorU3:  U3(beta) = ECFG(4, 1, beta) with pt_R
 -------------------------------------------------------------------------------------
    beta         U3 obs 
   0.100   0.0025141656 
@@ -909,7 +909,7 @@ EnergyCorrelatorU2:  U2(beta) = ECFG(3, 1, beta) with E_theta
 -------------------------------------------------------------------------------------
 
 -------------------------------------------------------------------------------------
-EnergyCorrelatorU3:  U3(beta) = ECFN(4, 1, beta) with E_theta
+EnergyCorrelatorU3:  U3(beta) = ECFG(4, 1, beta) with E_theta
 -------------------------------------------------------------------------------------
    beta         U3 obs 
   0.100   0.0025417550 
